[package]
name = "multiplayer_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_renet = "0.0.5"
bincode = "1.3.3"
noise = "0.8.1"
owo-colors = "3.5.0"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[features]

[profile.dev]
opt-level = 1
